--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNh4vl57z/+nK2VDRUeB8Fr",
+      "authorship_tag": "ABX9TyNEQBr59a/FRvS1X/eveC9R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,22 @@
       "metadata": {
         "id": "oFGZ37f4_vMb"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y = 4\n",
+        "\n",
+        "z = x + y\n",
+        "\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "n-Z9RGIHBter"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
