--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTcMFmzhY4/BNkvK3wiXPi",
+      "authorship_tag": "ABX9TyMcNCyEk8FkfJZJ8W5KRjCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,12 +128,78 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# DATA STRUCTURE AND DATA TYPES"
+      ],
+      "metadata": {
+        "id": "C-jxD3JzIMuR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " a = 4\n",
+        " type(a)"
+      ],
+      "metadata": {
+        "id": "e-JWDvJdIbW3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 2.5\n",
+        "type(b)"
+      ],
+      "metadata": {
+        "id": "e1S_OwDvJlL3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = 'hello world'\n",
+        "type(text)"
+      ],
+      "metadata": {
+        "id": "4JxdW61iJpuD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "boolvar = True\n",
+        "type(boolvar)"
+      ],
+      "metadata": {
+        "id": "YLARZ8LwJyb7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# LISTS, TUPLES AND DICTIONARY"
+      ],
+      "metadata": {
+        "id": "bH0SPm1lMIH-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "hxs0_s0pGHrA"
+        "id": "d7qt5mDQMPpY"
       },
       "execution_count": null,
       "outputs": []
