--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMcNCyEk8FkfJZJ8W5KRjCx",
+      "authorship_tag": "ABX9TyPvPljZeWkwOFTR2/xzOo0w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,10 +187,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# LISTS, TUPLES AND DICTIONARY"
+        "# LISTS, TUPLES AND DICTIONARY\n",
+        " \n",
+        "\n",
+        "*   As the name suggests, list in an ordered sequence of data. In real life, if you could make a list of things  that to your mind.\n",
+        "* A = [\"Brush\", \"Leuven\", 48851964400, 3.14, \"Mom\"] \n",
+        "* list are mutable, say if you want to change some item on a list, you can do tha.\n",
+        "*   Some essential features of Python lists are:\n",
+        "** Collection of values\n",
+        "** Can be of any data type\n",
+        "** Can be a combination of different types\n",
+        "\n",
+        "\n",
+        "     \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "bH0SPm1lMIH-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## List Methods\n",
+        "\n",
+        "### .append()\n",
+        " \n",
+        "\n",
+        "*   In python, you can add value to the end of a list using the .append() method\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DacmVZogUPfa"
       }
     },
     {
