--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvPljZeWkwOFTR2/xzOo0w",
+      "authorship_tag": "ABX9TyMRgvu/I8sSVSK98NWUNXmR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,7 +187,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# LISTS, TUPLES AND DICTIONARY\n",
+        "#**LISTS, TUPLES AND DICTIONARY**\n",
         " \n",
         "\n",
         "*   As the name suggests, list in an ordered sequence of data. In real life, if you could make a list of things  that to your mind.\n",
@@ -230,10 +230,109 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "orders = [\"diasies\",\"preiwinkle\"]\n",
+        "orders"
       ],
       "metadata": {
         "id": "d7qt5mDQMPpY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "orders.append(\"tulips\")"
+      ],
+      "metadata": {
+        "id": "auYEX8ezqw11"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(orders)"
+      ],
+      "metadata": {
+        "id": "K4ofFvAQq6Ms"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**count()** \n",
+        "### the .count() Python list method searches a list for whatever search term it receives as an argument,  the returns the number of matching entries found.\n"
+      ],
+      "metadata": {
+        "id": "7n9RkQkSrAMD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "backpack = [\"pencil\", \"pen\", \"notebook\", \"texbook\", \"pen\", \"highlighter\", \"pen\"]\n",
+        "numPen = backpack.count('pen')\n"
+      ],
+      "metadata": {
+        "id": "OZUcj3rlrZBI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numPen)"
+      ],
+      "metadata": {
+        "id": "oBGzJFdCrugB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**len()**\n",
+        "### the Python len() function can be used to determine the number of items found in the list it accepts as an argument."
+      ],
+      "metadata": {
+        "id": "-dZWHKohr0eB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "backpack = [\"pencil\", \"pen\", \"notebook\", \"texbook\", \"pen\", \"highlighter\", \"pen\"]\n",
+        "print(len(backpack))"
+      ],
+      "metadata": {
+        "id": "CgSjzxK_sLws"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**sort**\n",
+        "###the .sort() Python list method will sort the contents of whatever list it is called on. Numerical list will be sorted in ascending orde, and lists of Strings will be sorted into alphabetical order. It modifies the original list, and has no return value.\n"
+      ],
+      "metadata": {
+        "id": "6XCbt26FslQZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Hww6sXJ1tDWA"
       },
       "execution_count": null,
       "outputs": []
