--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRgvu/I8sSVSK98NWUNXmR",
+      "authorship_tag": "ABX9TyN+APU1bCxCvly1jcFNpe5S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,13 +329,212 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "examplelist = [4 , 2, 1, 3]"
       ],
       "metadata": {
         "id": "Hww6sXJ1tDWA"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "examplelist.sort()"
+      ],
+      "metadata": {
+        "id": "z2MuE5oyufuj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(examplelist)"
+      ],
+      "metadata": {
+        "id": "XJ7PA3eBujXK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Introduction & Implementation of Tuple in Python**\n",
+        "\n",
+        "##**Tuples**\n",
+        "\n",
+        "*   Tuple is also an ordered sequence of items as List. Tuple also holds mutiple data types\n",
+        "\n",
+        "*  The only difference in Tuple & List is that Tuple is immutable; once created it cannot be changed.\n",
+        "*  Creating a tuple is as simple as putting different comma-separated values within round brackets.\n",
+        "*  Example: A=('Brush','Leuven', 48851, 3.14, 'Mom')   \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-4cp3p3FustB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = (1,5,3,4,8)\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "0N6ep9kxweI5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0]"
+      ],
+      "metadata": {
+        "id": "NPFUVJP8xzKU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0] = 2 # error message"
+      ],
+      "metadata": {
+        "id": "H-ch7rXqx3xY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.count(8)"
+      ],
+      "metadata": {
+        "id": "7iig3Z3NyHNI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(x)"
+      ],
+      "metadata": {
+        "id": "5l17kLGdyVlc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = (1, 'max', 1.6)\n",
+        "y"
+      ],
+      "metadata": {
+        "id": "Qh15iFw8yYZE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = x + y \n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "fKW-x3-JyhDw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = ('hi', ) * 5\n",
+        "a"
+      ],
+      "metadata": {
+        "id": "K7jUggumy3_s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(a)"
+      ],
+      "metadata": {
+        "id": "z_7aPrbWy9Mz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Dictionary**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Dictionary is an unordered collection of key-value pairs.\n",
+        "*   Real word dictionaries are a good analogy to understand them: they contain a list of items(words).\n",
+        "*  It generally is used when we have a huge amount data.\n",
+        "*  It is defined within braces with each being in the form of key: value pair.\n",
+        "\n",
+        "my_dict ={\n",
+        "        \"key1\" : \"value1\",\n",
+        "         \"key2\" : \"value2\",\n",
+        "                            }\n",
+        "*  The keys in a dictionary must always be unique and immutable. This is the reason dictionary keys can be String but not List.\n",
+        "*  On the other hand, Values in a dictionary can be of any datatype and can be duplciated.\n",
+        "*  Dictionary keys are case sensitive, same name but different cases of Key will be treated distincly.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-Fmw9XH5zReH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = {\"George\": 24, \"Tom\":32}"
+      ],
+      "metadata": {
+        "id": "HeRzRpF_3Xvb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[\"George\"]\n"
+      ],
+      "metadata": {
+        "id": "GVIZosQ84qrB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "51pe3GyN4-z8"
+      }
     }
   ]
 }
