--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/ACMusBWw1OquIrXl+qIa",
+      "authorship_tag": "ABX9TyNcfyGr0rZQ/q3zeMEVYhhZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1172,6 +1172,30 @@
       "metadata": {
         "id": "rMhRku7O0s6K"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Shape, Size and Data Type of an Array**\n",
+        "\n",
+        "###**Create a NumPy Array**\n",
+        "\n",
+        "Import NumPy and create a NumPy array"
+      ],
+      "metadata": {
+        "id": "NiYfVTG53v5h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "49IFxW8k4EvR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
