--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcfyGr0rZQ/q3zeMEVYhhZ",
+      "authorship_tag": "ABX9TyNLCmyWYnWVN7NcLV6ZLROm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1189,13 +1189,152 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        " # Import NumPy Library\n",
+        " import numpy as np"
       ],
       "metadata": {
         "id": "49IFxW8k4EvR"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating a NumPy array using python nested list\n",
+        "\n",
+        "arr = np.array([[5, 6, 7], [8, 9, 10], [11, 12, 13], [1, 2, 3]])\n",
+        "arr"
+      ],
+      "metadata": {
+        "id": "DvtBLtGW4g3q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Size of an Array**\n",
+        "\n",
+        "NumPy array has an attribute called size that tells you the total number of elements in the array."
+      ],
+      "metadata": {
+        "id": "ugQAFpUm42qC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# checking the size of a NumPy array\n",
+        "arr.size"
+      ],
+      "metadata": {
+        "id": "G1Fndhn97St_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Data Types of Array**"
+      ],
+      "metadata": {
+        "id": "3k8bPuIs7fx4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking Data type of NumPy array\n",
+        "\n",
+        "arr.dtype"
+      ],
+      "metadata": {
+        "id": "n4f5TLRF7oam"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Shape of an Array**\n",
+        "\n",
+        "An array has an attribute called shape that tells you the number of items along each axis.\n"
+      ],
+      "metadata": {
+        "id": "PHz5WEM47xGX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr"
+      ],
+      "metadata": {
+        "id": "bKfRWUABn7gP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chacking the shape of a NumPy array\n",
+        "arr.shape"
+      ],
+      "metadata": {
+        "id": "C63SZp1noYiR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Dimension  of an Array**\n",
+        "\n",
+        "An array has an attribute called dimension that tells you the number of axis in the array.\n",
+        "\n",
+        "You can check the number of dimensions of a NumPy array using '.ndim' method. The array 'arr' is 2 dimensional(i.e. the array has two axis)"
+      ],
+      "metadata": {
+        "id": "NE0rrn2-otHP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr"
+      ],
+      "metadata": {
+        "id": "digsVxZWozF1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# cheking the dimension of a NumPy array\n",
+        "arr.ndim"
+      ],
+      "metadata": {
+        "id": "pvMjwykJo1J8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "FXZTQtVDpcDf"
+      }
     }
   ]
 }
