--- a/Week_1_.ipynb
+++ b/Week_1_.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLCmyWYnWVN7NcLV6ZLROm",
+      "authorship_tag": "ABX9TyPCt11UxvKZBVDlPv0K4eTj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1330,11 +1330,86 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "##**type () function and dtype method**\n",
+        "\n",
+        "Suppose you have an object, if you want to know what type of object is that, you will us type() function to know about it.\n",
+        "\n",
+        "Now you know the object is a NumPy ndarray. If you want to know the type of data present in that array you will used method '.dtype'. This is also called type of NumPy array."
       ],
       "metadata": {
         "id": "FXZTQtVDpcDf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(arr)"
+      ],
+      "metadata": {
+        "id": "tGPoN8CNs6_D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr.dtype"
+      ],
+      "metadata": {
+        "id": "mMhy2Kvus-64"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Caution: dtype method on Python Lists**\n",
+        "\n",
+        "this is to be taken care that Python Lists don't support '.dtype' method or any other methods supported by a NumPy array"
+      ],
+      "metadata": {
+        "id": "SenBfeZ3tbDe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating a Python List\n",
+        "python_list = [1, 2, 3, 4]"
+      ],
+      "metadata": {
+        "id": "GA5TJdAMuA8K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking the type of object - python_list\n",
+        "\n",
+        "type(python_list)"
+      ],
+      "metadata": {
+        "id": "BLhz2rK5uJHJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 'dtype' method not supported on Python Lists\n",
+        "\n",
+        "python_list.dtype"
+      ],
+      "metadata": {
+        "id": "W7Y_RQCjuQAb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
